Covering Java 9 modules